# zgx-onboard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Design Document_ AML Investigation Agent (FunctionGemma + GRPO).md  Design Document_ Reflexive Financial AI Agent.md  Makefile  Project Design_ Financial Reasoning Agent.md  README.md  env.example  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: default_config.yaml
docker/: Dockerfile  README.md  build-and-run.sh
docs/: README.md
examples/: README.md  quick_start.py
experiments/: README.md
notebooks/: README.md
notebooks/agents/: aml_investigation_agent.ipynb  aml_investigation_agent_langgraph.ipynb  aml_investigation_agent_v2.ipynb  benchmark_results_20251129_215506.csv  benchmark_results_20260117_215327.csv  benchmark_results_20260118_003057.csv  benchmark_results_20260118_214952.csv  financial_reasoning_agent_grpo.ipynb  qwen3_hotpotqa_benchmark.ipynb  reflexive_financial_agent.ipynb
notebooks/agents/data/: financial_benchmark_v1_eval.jsonl  financial_benchmark_v1_full.jsonl  financial_benchmark_v1_train.jsonl
notebooks/inference/: zgx_nano_ollama_performance.ipynb  zgx_nano_performance_20251124_192659.csv  zgx_nano_performance_summary_20251124_192659.csv  zgx_nano_unified_memory.ipynb  zgx_unified_memory_results_20251214_163059.csv  zgx_unified_memory_summary_20251214_163059.csv
notebooks/tuning/: base_results_20260114_062415.csv  base_results_20260114_062415.json  base_results_20260115_034324.csv  base_results_20260115_034324.json  finbot_tool_calling_sft.ipynb  grpo_financial_reasoning.ipynb  tuned_results_20260115_124316.csv  tuned_results_20260115_124316.json
scripts/: setup_env.sh
src/zgx_onboard/: __init__.py
src/zgx_onboard/agents/: __init__.py
src/zgx_onboard/inference/: __init__.py
src/zgx_onboard/tuning/: __init__.py
src/zgx_onboard/utils/: __init__.py  config.py  logging.py
tests/: __init__.py
tests/unit/: test_config.py
