[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zgx-onboard"
version = "0.1.0"
description = "Local AI experiments with HP ZGX Nano AI Station"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Dependencies will be managed with uv
# Add packages using: uv add <package>
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "nvidia-ml-py3>=7.352.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pynvml>=13.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
# Development dependencies can be added with: uv add --dev <package>
dev = []

[project.urls]
Homepage = "https://github.com/yourusername/zgx-onboard"
Documentation = "https://github.com/yourusername/zgx-onboard/docs"
Repository = "https://github.com/yourusername/zgx-onboard"
Issues = "https://github.com/yourusername/zgx-onboard/issues"

[tool.setuptools]
packages = ["zgx_onboard"]

[tool.setuptools.package-data]
"zgx_onboard" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=zgx_onboard",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--verbose",
]

